--- a/src/1-4-formal.tex
+++ b/src/1-4-formal.tex
@@ -122,7 +122,8 @@ It looks like for any $\epsilon>0$, if $\abs{x-5} < \frac{\epsilon}{2}$ then $\a
 
 \begin{example}
     Show that $\lim_{x\to 4}1/x = 1/4$.
-
+\end{example}
+\begin{solution}
     We apply the definition with $a=4$, $L=1/4$ and $f(x) = 1/x$.
     Thus, for any $\epsilon>0$ we try to show that if $|x-4|$ is small
     enough then one has $|f(x)-1/4|<\epsilon$.
@@ -154,12 +155,13 @@ It looks like for any $\epsilon>0$, if $\abs{x-5} < \frac{\epsilon}{2}$ then $\a
     \delta = \text{the smaller of }1\text{ and }12\epsilon = \min \bigl(1,
     12\epsilon\bigr).
     \]
-\end{example}
+\end{solution}
 
 \begin{example}
     Verify that $\Lim{x}{2} \dfrac{x-2}{1+x^2} = 0$.
-
-    Solution: Notice that $\dfrac{\abs{x-2}}{\abs{1+x^2}} < \abs{x-2}$ since $1+x^2 > 1$. Hence choose $\delta=\epsilon$.
 \end{example}
+\begin{solution}
+    Notice that $\dfrac{\abs{x-2}}{\abs{1+x^2}} < \abs{x-2}$ since $1+x^2 > 1$. Hence choose $\delta=\epsilon$.
+\end{solution}
 
 \end{document}
