--- a/src/P-0-sets.tex
+++ b/src/P-0-sets.tex
@@ -8,7 +8,7 @@ If $x$ is not a member of $A$, we write $x\notin A$.
 
 $\varnothing$ is the set which contains no element and is called the \textbf{empty set}.
 
-There are finite sets (ex. $\{0,1,2\}$) and infinite sets (ex. $\{0,1,2,3,...\}$).
+There are finite sets such as $\{0,1,2\}$ and infinite sets such as $\{0,1,2,3,...\}$.
 
 If every element of the set $A$ is an element of the set $B$, we say that $A$ is \textbf{subset} of $B$, and write $A\subset B$.
 
