--- a/src/P-3-quadratics.tex
+++ b/src/P-3-quadratics.tex
@@ -30,13 +30,14 @@ A parabola P is the set of all points in the plane that are equidistant from a g
 
 \begin{example}
   Find the equation of the parabola having the point $F(0,p)$as focus and the line L with equation $y=-p$ as directrix.
-
-  Solution. If $P(x,y)$ is any point on the parabola then squaring both sides of PF=PQ we get
+\end{example}
+\begin{solution}
+  If $P(x,y)$ is any point on the parabola then squaring both sides of PF=PQ we get
   \[
     x^2 + (y-p)^2 = 0^2 + (y+p)^2
   \]
   After simplifying, $y=x^2/4p$.
-\end{example}
+\end{solution}
 
 \subsection*{Shifting a Graph}
 Let $c>0$.
