--- a/src/P-5-operfunctions.tex
+++ b/src/P-5-operfunctions.tex
@@ -4,14 +4,12 @@
 
 If $f$ and $g$ are functions, then for every $x$ that belongs to the domains
 of both $f$ and $g$ we define functions
-
-$(f+g)(x)=f(x)+g(x)$
-
-$(f-g)(x)=f(x)-g(x)$
-
-$(fg)(x)=f(x)g(x)$
-
-$(f/g)(x)=f(x)/g(x)$ where $g(x)\neq 0.$
+\begin{itemize}
+  \item $(f+g)(x)=f(x)+g(x)$
+  \item $(f-g)(x)=f(x)-g(x)$
+  \item $(fg)(x)=f(x)g(x)$
+  \item $(f/g)(x)=f(x)/g(x)$ where $g(x)\neq 0.$
+\end{itemize}
 
 \begin{example}
 Let $f(x)=\frac{1}{x+2}$ and $g(x)=\frac{x}{x-1}$. Find $(f+g)(x),(f-g)(x),$
@@ -59,8 +57,8 @@ g(x) =
 \]
 which are defined by different formulas on different intervals are sometimes called \textbf{piecewise defined functions.}
 
-\subsection*{Inverse Functions}
-Remember that a function is \textbf{one-to-one} if for every value in the range, there is exactly one value in the domain.
+% \subsection*{Inverse Functions}
+% Remember that a function is \textbf{one-to-one} if for every value in the range, there is exactly one value in the domain.
 
-A function is one-to-one if every horizontal line crosses its graph at most once, which is commonly known as the \textbf{horizontal line test}.
+% A function is one-to-one if every horizontal line crosses its graph at most once, which is commonly known as the \textbf{horizontal line test}.
 \end{document}
