--- a/src/2-3-diffrules.tex
+++ b/src/2-3-diffrules.tex
@@ -1,98 +1,153 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-The graph of a function can not have a break at a point where it is smooth. Obvious!
-\begin{theorem}
+  Differentiability is stronger than continuity.
+  \begin{theorem}
     If $f$ is differentiable at $x$ then $f$ is cts at $x$.
-\end{theorem}
+  \end{theorem}
 
-\begin{theorem}
+  \begin{proof}
     \[
-        \lim_{h \to 0} (f(x+h) - f(x)) =
-        \lim_{h \to 0} \dfrac{f(x+h) - f(x)}{h}
-        \lim_{h \to 0} h = f'(x) 0 = 0
+      \lim_{h \to 0} (f(x+h) - f(x)) =
+      \lim_{h \to 0} \dfrac{f(x+h) - f(x)}{h}
+      \lim_{h \to 0} h = f'(x) 0 = 0
     \]
     This means
     \[
-        \lim_{h \to 0} f(x+h)=f(x)
+      0 =
+      \lim_{h \to 0} f(x+h) - \lim_{h \to 0} f(x) =
+      \lim_{h \to 0} f(x+h) - f(x)
     \]
-\end{theorem}
+    Hence
+    \[
+      \lim_{h \to 0} f(x+h) = f(x)
+    \]
+  \end{proof}
 
-\begin{theorem}
+  \begin{theorem}
     If $f$ and $g$ are differentiable at $x$ then
     \[
-        (f+g)'(x) = f'(x) + g'(x),
+      (f+g)'(x) = f'(x) + g'(x),
     \]
     \[
-        (f-g)'(x) = f'(x) - g'(x),
+      (f-g)'(x) = f'(x) - g'(x),
     \]
     and for any constant $c$
     \[
-        (c f)'(x) = c f'(x).
+      (c f)'(x) = c f'(x).
     \]
-\end{theorem}
-The proof of this theorem is easy but let's skip it.
+  \end{theorem}
+  \begin{proof}
+    Let's prove the derivative of sums is sum of derivatives. The others are similar.
+    \[
+      \begin{split}
+        (f+g)'(x) &=
+        \lim_{h \to 0} \frac{(f+g)(x+h) - (f+g)(x)}{h} =
+        \lim_{h \to 0} \frac{f(x+h)+g(x+h) - f(x)+g(x)}{h} \\
+        & = \lim_{h \to 0} \frac{f(x+h)-f(x)}{h} +
+        \lim_{h \to 0} \frac{g(x+h)-g(x)}{h} =
+        f'(x) + g'(x),
+      \end{split}
+    \]
+  \end{proof}
 
-The sum rule extends to any number of functions.
-\[
+  The sum rule extends to any number of functions.
+  \[
     (f_1 + \cdots + f_n)'(x) = f_1'(x) + \cdots + f_n'(x).
-\]
+  \]
 
-\begin{example}
+  \begin{example}
     Take the derivative of
     \[
-        f(x) = 5 \sqrt{x} + \frac{3}{x} - 19
+      f(x) = 5 \sqrt{x} + \frac{3}{x} - 19
     \]
-\end{example}
+  \end{example}
 
-It is NOT true that derivative of product of functions is a product of their derivatives
-\begin{theorem}
-    If $f$ and $g$ are diffentiable at $x$ then
+  It is NOT true that derivative of product of functions is a product of their derivatives. Usually $(fg)'(x) \neq f(x) g(x)$.
+
+  \begin{theorem}
+    If $f$ and $g$ are differentiable at $x$ then
     \[
-        (f g)'(x) = f'(x) g(x) + f(x) g'(x).
+      (f g)'(x) = f'(x) g(x) + f(x) g'(x).
     \]
-\end{theorem}
+  \end{theorem}
 
-\begin{example}
+  \begin{example}
     Find the derivative of $f(x) = (x^2+x+1)(2x + \frac{1}{x})$.
-\end{example}
+  \end{example}
 
-The product rule can be extended to any number of functions
-\[
+  The product rule can be extended to any number of functions
+  \[
     (f_1 f_2 f_3)' = f_1' f_2 f_3 + f_1 f_2' f_3  + f_1 f_2 f_3'
-\]
-\[
+  \]
+  \[
     (f_1 \cdots f_n)' = f_1' f_2 \cdots f_3 + f_1 f_2' f_3 \cdots f_n + \cdots + f_1 \cdots f_{n-1} f_n'.
-\]
+  \]
 
-\begin{theorem}
+  \begin{theorem}
     If $f$ is differentiable at $x$ and $f(x) \neq 0$ then $1/f$ is diff at $x$, and
     \[
-        \left(\dfrac{1}{f} \right)'(x) = \dfrac{-f'(x)}{f(x)^2}.
+      \left(\dfrac{1}{f} \right)'(x) = \dfrac{-f'(x)}{f(x)^2}.
     \]
-\end{theorem}
-\begin{proof}
-\[
-    \dfrac{d}{dx} \dfrac{1}{f(x)} = \cdots = \lim_{h \to 0} \dfrac{-1}{f(x+h) f(x)} \lim_{h \to 0} \dfrac{f(x+h)-f(x)}{h}
-\]
-The result follows by limit rules and continuity of $f$.
-\end{proof}
+  \end{theorem}
+  \begin{proof}
+    \[
+      \dfrac{d}{dx} \dfrac{1}{f(x)} = \lim_{h \to 0} \frac{\frac{1}{f(x+h)}-\frac{1}{f(x)}}{h} = \lim_{h \to 0} \dfrac{-1}{f(x+h) f(x)} \lim_{h \to 0} \dfrac{f(x+h)-f(x)}{h}
+    \]
+    The result follows by limit rules and continuity of $f$.
+  \end{proof}
 
-\begin{example}
+  \begin{example}
     Differentiate $y = \dfrac{1}{x^{2/3} + 1}$
-\end{example}
+  \end{example}
 
-Use the product rule and reciprocal rule to obtain quotient rule. If $f$ and $g$ are differentiable at $x$ and $g(x) \neq 0$ then
-\[
-    \left( \dfrac{f}{g} \right)'(x) = \left( \dfrac{1}{g}(x) f(x) \right)' = \dfrac{f'(x) g(x) - f(x) g'(x)}{g^2(x)}
-\]
+  \begin{theorem}
+    If $f$ and $g$ are differentiable at $x$ and $g(x) \neq 0$ then
+    \[
+      \left( \dfrac{f}{g} \right)'(x) =
+      \dfrac{f'(x) g(x) - f(x) g'(x)}{g^2(x)}
+    \]
+  \end{theorem}
+  \begin{proof}
+    Using the product rule and reciprocal rule,
+    \[
+      \left( \dfrac{f}{g} \right)'(x) = \left( \dfrac{1}{g}(x) f(x) \right)' = \dfrac{f'(x) g(x) - f(x) g'(x)}{g^2(x)}
+    \]
+  \end{proof}
 
-\begin{example}
+  \begin{example}
     Find the derivative of $f(x) = \dfrac{a + b x}{m + c x}$.
-\end{example}
+  \end{example}
 
-\begin{example}
+  \begin{example}
     Find an equation of the tangent line to $y = \dfrac{2}{3-4 \sqrt{x}}$ at the point $(1, -2)$.
-\end{example}
+  \end{example}
+  \begin{solution}
+    Let us define $g(x)=3-4\sqrt{x}$. Then $g'(x)=-4 \frac{1}{2\sqrt{x}}=-\frac{2}{\sqrt{x}}$ and
+    \[
+      y'=2 \frac{-g'(x)}{g(x)^2}
+      =2 \frac{\frac{2}{\sqrt{x}}}{(3-4\sqrt{x})^2}
+      =\frac{4}{\sqrt{x}(3-4\sqrt{x})^2}
+    \]
+    Hence $y'(1)=4$. And the equation of the tangent line is $y=4(x-1)-2$.
+  \end{solution}
 
+  \begin{example}
+    Find the x-coordinates of points on the curve $y=\frac{x+1}{x+2}$ where the tangent line is parallel to the line $y=4x$.
+  \end{example}
+  \begin{solution}
+    Solving $y'=4$, we find $x=-3/2$ and $x=-5/2$.
+  \end{solution}
+  \begin{example}
+    If $f(2)=2$ and $f'(2)=3$, calculate
+    \[
+      \left. \frac{d}{dx}\left( \frac{x^2}{f(x)} \right) \right\vert_{x=2}
+    \]
+  \end{example}
+  \begin{solution}
+    Answer is
+    \[
+      \frac{2\cdot2f(2)-2^2 f'(2)}{f(2)^2} = \frac{8-12}{4} = -1.
+    \]
+  \end{solution}
 \end{document}
