--- a/main.tex
+++ b/main.tex
@@ -37,7 +37,7 @@
     \section{Informal definition of limits}
     \subfile{src/1-1-limit.tex}
     \section{Limits at Infinity and Infinite Limits}
-    \subfile{1-2-infiniteLimits.tex}
+    \subfile{src/1-2-infiniteLimits.tex}
     \section{Continuity}
     \subfile{src/1-3-continuity.tex}
     \section{Formal definition of Limit}
@@ -50,15 +50,15 @@
 %     \subfile{src/1-2-properties-limits.tex}
 
 
-% \chapter{Differentiation}
-%     \section{Tangent Lines and Their Slopes}
-%     \subfile{src/2-1-tangent}
-%     \section{Derivative}
-%     \subfile{src/2-2-derivative}
-%     \section{Differentiation Rules}
-%     \subfile{src/2-3-diffrules}
-%     \section{Chain Rule}
-%     \subfile{src/2-4-chain}
+\chapter{Differentiation}
+    \section{Tangent Lines and Their Slopes}
+    \subfile{src/2-1-tangent}
+    \section{Derivative}
+    \subfile{src/2-2-derivative}
+    \section{Differentiation Rules}
+    \subfile{src/2-3-diffrules}
+    % \section{Chain Rule}
+    % \subfile{src/2-4-chain}
 %     \section{Derivatives of Trigonometric Functions}
 %     \subfile{src/2-5-trig}
 %     \section{Higher Order Derivatives}
