--- a/taylanmacros.sty
+++ b/taylanmacros.sty
@@ -91,6 +91,6 @@
 \newtheorem{notation}{Notation}
 \newtheorem{problem}{Problem}
 \newtheorem{proposition}{Proposition}
-\newtheorem{remark}{Remark}
+\newtheorem*{remark}{Remark}
 \newtheorem*{solution}{Solution}
 \newtheorem{summary}{Summary}
